--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,12 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Gastos <span class="sr-only">(current)</span></a></li>
+          <li class="active"><a href="#">Gastos <span class="sr-only">(current)</span>
+              
+          </a></li>
+          <% if user_signed_in? %>
+          <li class="active"> <%= link_to "salir", destroy_user_session_path, :method => :delete %></li>
+          <% end %>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
