--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
               
           </a></li>
           <% if user_signed_in? %>
-          <li class="active"> <%= link_to "salir", destroy_user_session_path, :method => :delete %></li>
+          <li class="active"> <%= link_to "Salir", destroy_user_session_path, :method => :delete %></li>
           <% end %>
         </ul>
       </div><!-- /.navbar-collapse -->
